--- a/package.json
+++ b/package.json
@@ -6,11 +6,21 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prettier": "prettier --write ."
   },
   "dependencies": {
+    "@ant-design/icons": "^5.3.7",
+    "@ant-design/nextjs-registry": "^1.0.0",
+    "antd": "^5.18.0",
+    "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.3"
+    "sass": "^1.77.4"
+  },
+  "devDependencies": {
+    "babel-plugin-styled-components": "^2.1.4",
+    "prettier": "^3.3.1",
+    "styled-components": "^6.1.11"
   }
 }
