--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@ant-design/icons": "^5.3.7",
     "@ant-design/nextjs-registry": "^1.0.0",
     "antd": "^5.18.0",
+    "dayjs": "^1.11.12",
+    "jotai": "^2.9.1",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
