--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "sass": "^1.77.4"
+    "sass": "^1.77.4",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "babel-plugin-styled-components": "^2.1.4",
