--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@ant-design/nextjs-registry": "^1.0.0",
     "antd": "^5.18.0",
     "dayjs": "^1.11.12",
+    "html2canvas": "^1.4.1",
     "jotai": "^2.9.1",
+    "jspdf": "^2.5.1",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
